# keel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  Taskfile.yml  ruff.toml  skill.manifest
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml  release.yml
assets/templates/commands/: keel-check.md.j2  keel-decisions.md.j2  keel-map.md.j2  keel-new.md.j2  keel-status.md.j2  keel-tree.md.j2
assets/templates/hooks/: pre-commit.j2
assets/templates/hooks/plugin/: hooks.json.j2
assets/templates/keel/: inception_decision.json.j2
assets/templates/marketplace/: marketplace.json.j2
assets/templates/plugin/: plugin.json.j2
assets/templates/project/: claude_md.j2
assets/templates/settings/: settings.local.json.j2
assets/templates/skills/keel-audit/: skill.md.j2
assets/templates/skills/keel-decide/: skill.md.j2
assets/templates/skills/keel-frame/: contracts.json.j2  skill.md.j2
assets/templates/skills/keel-gen/: skill.md.j2
assets/templates/skills/keel-map/: skill.md.j2
cli/: Dockerfile  pyproject.toml
cli/src/keel_cli/: __init__.py  __main__.py  audit.py  check.py  decide.py  decisions.py  ignore.py  imports.py  install.py  io_blocklist.py  main.py  map_cmd.py  parser.py  status.py  tree.py
cli/tests/: test_ignore.py
references/: FRAMEWORK.md
