[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keel-cli"
version = "1.0.0"
description = "Architectural contract enforcement for LLM-driven codebases"
readme = "../README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.0",
]

[project.scripts]
keel = "keel_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/keel_cli"]
