[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "keel-cli"
dynamic = ["version"]
description = "Architectural contract enforcement for LLM-driven codebases"
readme = "../README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.0",
]

[project.scripts]
keel = "keel_cli.main:cli"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/keel_cli"]

[tool.hatch.build.targets.wheel.force-include]
"../skill.manifest" = "keel_cli/data/skill.manifest"
"../SKILL.md" = "keel_cli/data/SKILL.md"
"../references/FRAMEWORK.md" = "keel_cli/data/references/FRAMEWORK.md"
"../assets/templates" = "keel_cli/data/assets/templates"
